feat(ai): Implement chat conversation and message management with structured output