@@ -1,43 +1,52 @@
 package com.pdh.ai.service;
 
+import java.time.Instant;
 import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import com.pdh.ai.ChatHistoryResponse;
+import com.pdh.ai.model.dto.StructuredChatPayload;
+import com.pdh.ai.model.dto.StructuredResultItem;
+import com.pdh.ai.model.entity.ChatMessage;
 import com.pdh.common.utils.AuthenticationUtils;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.ai.chat.client.advisor.MessageChatMemoryAdvisor;
 import org.springframework.ai.chat.memory.ChatMemory;
-import org.springframework.ai.chat.memory.ChatMemoryRepository;
-import org.springframework.ai.chat.messages.Message;
+import org.springframework.ai.converter.BeanOutputConverter;
 import org.springframework.ai.tool.ToolCallbackProvider;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
-import org.springframework.web.context.annotation.SessionScope;
+
+import com.pdh.ai.repository.ChatMessageRepository;
 
 @Service
-@SessionScope
 public class LLMAiService implements AiService {
 
     private final ChatClient chatClient;
-    private final ChatMemory chatMemory;
-    private final ChatMemoryRepository chatMemoryRepository;
-    private final String conversationId;
-    
-    public LLMAiService(ChatClient.Builder builder, 
-                        
-                @Qualifier("customSyncMcpToolCallbackProvider") ToolCallbackProvider toolCallbackProvider,
-                       ChatMemory chatMemory,
-                       ChatMemoryRepository chatMemoryRepository,
-                       WeatherSearchTool weatherSearchTool,
-                       LocationCoordinatesTool locationCoordinatesTool) {   
+    private final JpaChatMemory chatMemory;
+    private final ConversationService conversationService;
+    private final ChatMessageRepository chatMessageRepository;
+    private final ToolResultCollector toolResultCollector;
+    private final BeanOutputConverter<StructuredChatPayload> outputConverter;
+
+    public LLMAiService(ChatClient.Builder builder,
+                        @Qualifier("customSyncMcpToolCallbackProvider") ToolCallbackProvider toolCallbackProvider,
+                        JpaChatMemory chatMemory,
+                        ConversationService conversationService,
+                        ChatMessageRepository chatMessageRepository,
+                        ToolResultCollector toolResultCollector) {
+
         this.chatMemory = chatMemory;
-        this.chatMemoryRepository = chatMemoryRepository;
+        this.conversationService = conversationService;
+        this.chatMessageRepository = chatMessageRepository;
+        this.toolResultCollector = toolResultCollector;
+        this.outputConverter = new BeanOutputConverter<>(StructuredChatPayload.class);
         this.chatClient = builder
                 .defaultToolCallbacks(toolCallbackProvider)
-                // .defaultTools(weatherSearchTool,locationCoordinatesTool)
                 .defaultSystem("""
                         You are a helpful assistant that helps users book travel accommodations including flights and hotels.
                         You orchestrate multi-step plans using available MCP tools such as search_flights, search_hotels. (default for page number is 0 and page size is 20)
@@ -45,120 +54,184 @@ public class LLMAiService implements AiService {
                         Ask user for any missing information you need to complete the booking.
                         Always remember to ask the user for confirmation before making a booking.
                         If the user asks for something you can't help with, politely decline.
-                        """)
+                        %s
+                        All dates provided to tools or in metadata must use ISO format YYYY-MM-DD (year-month-day) with zero padding; never swap month and day positions.
+                        """.formatted(outputConverter.getFormat()))
                 .defaultAdvisors(
                         MessageChatMemoryAdvisor.builder(chatMemory)
                                 .build())
+                                
                 .build();
-        
-        this.conversationId = UUID.randomUUID().toString();
     }
 
     @Override
-    public String complete(String message) {
-        
-        return this.chatClient.prompt()
-                .user(userMessage -> userMessage.text(message))
-                .advisors(a ->a.param(ChatMemory.CONVERSATION_ID, this.conversationId))
-                .call()
-                .content();
+    public StructuredChatPayload complete(String message) {
+        String userId = resolveUserId(null);
+        UUID conversationUuid = ensureConversation(null, userId, defaultTitle());
+
+        return executeCompletion(message, conversationUuid);
     }
 
     @Override
-    public String completeWithConversation(String message, String conversationId, String userId) {
-        String actualUserId = userId != null ? userId : getCurrentUserId();
-        String actualConversationId = createUserConversationId(conversationId, actualUserId);
-        
-        return this.chatClient.prompt()
-                .user(userMessage -> userMessage.text(message))
-                .advisors(a -> a.param(ChatMemory.CONVERSATION_ID, actualConversationId))
-                .call()
-                .content();
+    public StructuredChatPayload completeWithConversation(String message, String conversationId, String userId) {
+        String actualUserId = resolveUserId(userId);
+        UUID conversationUuid = ensureConversation(conversationId, actualUserId, defaultTitle(message));
+
+        return executeCompletion(message, conversationUuid);
     }
 
     @Override
     public ChatHistoryResponse getChatHistory(String conversationId, String userId) {
-        String actualUserId = userId != null ? userId : getCurrentUserId();
-        String actualConversationId = createUserConversationId(conversationId, actualUserId);
-        
-        try {
-            List<Message> messages = chatMemory.get(actualConversationId);
-            
-            List<ChatHistoryResponse.ChatMessage> chatMessages = messages.stream()
-                    .map(message -> ChatHistoryResponse.ChatMessage.builder()
-                            .content(message.getText())
-                            .role(message.getMessageType().name().toLowerCase())
-                            .timestamp(LocalDateTime.now()) // Spring AI doesn't store timestamps by default
-                            .build())
-                    .collect(Collectors.toList());
-            
-            return ChatHistoryResponse.builder()
-                    .conversationId(conversationId) // Return original conversationId to client
-                    .messages(chatMessages)
-                    .createdAt(LocalDateTime.now())
-                    .lastUpdated(LocalDateTime.now())
-                    .build();
-        } catch (Exception e) {
-            // Return empty history if conversation doesn't exist
-            return ChatHistoryResponse.builder()
-                    .conversationId(conversationId)
-                    .messages(List.of())
-                    .createdAt(LocalDateTime.now())
-                    .lastUpdated(LocalDateTime.now())
-                    .build();
-        }
+        String actualUserId = resolveUserId(userId);
+        UUID conversationUuid = parseConversationId(conversationId);
+
+        var conversation = conversationService.getConversation(conversationUuid)
+                .filter(c -> c.getUserId().equals(actualUserId))
+                .orElseThrow(() -> new IllegalArgumentException("Conversation not found for user"));
+
+        List<ChatMessage> storedMessages = chatMessageRepository
+                .findByConversationIdOrderByTimestampAsc(conversationUuid);
+
+        List<ChatHistoryResponse.ChatMessage> chatMessages = storedMessages.stream()
+                .map(entity -> ChatHistoryResponse.ChatMessage.builder()
+                        .content(entity.getContent())
+                        .role(entity.getRole().name().toLowerCase())
+                        .timestamp(LocalDateTime.ofInstant(entity.getTimestamp(), ZoneOffset.UTC))
+                        .build())
+                .toList();
+
+        Instant createdAt = conversation.getCreatedAt();
+        Instant lastUpdatedInstant = storedMessages.isEmpty()
+                ? createdAt
+                : storedMessages.get(storedMessages.size() - 1).getTimestamp();
+
+        return ChatHistoryResponse.builder()
+                .conversationId(conversationId)
+                .messages(chatMessages)
+                .createdAt(LocalDateTime.ofInstant(createdAt, ZoneOffset.UTC))
+                .lastUpdated(LocalDateTime.ofInstant(lastUpdatedInstant, ZoneOffset.UTC))
+                .build();
     }
 
     @Override
     public void clearChatHistory(String conversationId, String userId) {
-        String actualUserId = userId != null ? userId : getCurrentUserId();
-        String actualConversationId = createUserConversationId(conversationId, actualUserId);
-        chatMemory.clear(actualConversationId);
+        String actualUserId = resolveUserId(userId);
+        UUID conversationUuid = parseConversationId(conversationId);
+
+        if (!conversationService.belongsToUser(conversationUuid, actualUserId)) {
+            throw new IllegalArgumentException("Conversation not found for user");
+        }
+
+        chatMemory.clear(conversationUuid.toString());
+        conversationService.deleteConversation(conversationUuid);
     }
 
     @Override
     public List<String> getUserConversations(String userId) {
-        try {
-            String actualUserId = userId != null ? userId : getCurrentUserId();
-            // Get all conversation IDs and filter those belonging to the user
-            List<String> allConversations = chatMemoryRepository.findConversationIds();
-            String userPrefix = actualUserId + ":";
-            
-            return allConversations.stream()
-                    .filter(id -> id.startsWith(userPrefix))
-                    .map(id -> id.substring(userPrefix.length())) // Remove user prefix
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            return List.of();
-        }
+        String actualUserId = resolveUserId(userId);
+        return conversationService.listConversations(actualUserId).stream()
+                .map(conversation -> conversation.getId().toString())
+                .toList();
     }
 
-    /**
-     * Get current user ID from JWT token in security context
-     */
     private String getCurrentUserId() {
         try {
             return AuthenticationUtils.extractUserId();
         } catch (Exception e) {
-            // If unable to extract userId (e.g., no authentication), return null
+
             return null;
         }
     }
 
-    /**
-     * Create a composite conversation ID that includes userId for segregation
-     * Format: userId:conversationId
-     */
-    private String createUserConversationId(String conversationId, String userId) {
-        if (userId == null) {
-            userId = "anonymous";
+    private String resolveUserId(String requestUserId) {
+        if (requestUserId != null && !requestUserId.isBlank()) {
+            return requestUserId;
         }
-        
-        String actualConversationId = conversationId;
-        if (actualConversationId == null) {
-            actualConversationId = this.conversationId;
+        String authenticatedUserId = getCurrentUserId();
+        if (authenticatedUserId != null && !authenticatedUserId.isBlank()) {
+            return authenticatedUserId;
         }
-        
-        return userId + ":" + actualConversationId;
+        return "anonymous";
     }
+
+    private UUID ensureConversation(String conversationId, String userId, String title) {
+        if (conversationId == null || conversationId.isBlank()) {
+            return conversationService.createConversation(userId, title);
+        }
+
+        UUID conversationUuid = parseConversationId(conversationId);
+        var existingConversation = conversationService.getConversation(conversationUuid);
+
+        if (existingConversation.isPresent()) {
+            if (!existingConversation.get().getUserId().equals(userId)) {
+                throw new IllegalArgumentException("Conversation does not belong to user");
+            }
+            return conversationUuid;
+        }
+
+        conversationService.createConversation(userId, title, conversationUuid);
+        return conversationUuid;
+    }
+
+    private UUID parseConversationId(String conversationId) {
+        try {
+            return UUID.fromString(conversationId);
+        } catch (IllegalArgumentException ex) {
+            throw new IllegalArgumentException("Invalid conversation id", ex);
+        }
+    }
+
+    private String defaultTitle() {
+        return "Conversation " + LocalDateTime.now(ZoneOffset.UTC);
+    }
+
+    private String defaultTitle(String message) {
+        if (message == null || message.isBlank()) {
+            return defaultTitle();
+        }
+        int maxLength = 60;
+        String sanitized = message.replaceAll("\s+", " ").trim();
+        return sanitized.length() <= maxLength ? sanitized : sanitized.substring(0, maxLength) + "...";
+    }
+
+    private StructuredChatPayload executeCompletion(String message, UUID conversationUuid) {
+        toolResultCollector.clear();
+        try {
+            StructuredChatPayload payload = this.chatClient.prompt()
+                    .user(userMessage -> userMessage.text(message))
+                    .advisors(a -> a.param(ChatMemory.CONVERSATION_ID, conversationUuid.toString()))
+                    .call()
+                    .entity(outputConverter);
+
+            // Ensure payload has required fields
+            if (payload == null) {
+                payload = StructuredChatPayload.builder()
+                        .message("I apologize, but I couldn't process your request properly.")
+                        .results(Collections.emptyList())
+                        .build();
+            }
+
+            if (payload.getMessage() == null || payload.getMessage().isBlank()) {
+                payload.setMessage("I processed your request but couldn't generate a proper response message.");
+            }
+
+            // Merge tool results with AI response results
+            List<StructuredResultItem> toolResults = toolResultCollector.consume();
+            if (!toolResults.isEmpty()) {
+                List<StructuredResultItem> merged = new ArrayList<>();
+                if (payload.getResults() != null && !payload.getResults().isEmpty()) {
+                    merged.addAll(payload.getResults());
+                }
+                merged.addAll(toolResults);
+                payload.setResults(merged);
+            } else if (payload.getResults() == null) {
+                payload.setResults(Collections.emptyList());
+            }
+
+            return payload;
+        } finally {
+            toolResultCollector.clear();
+        }
+    }
+
 }
